Added view and template for detailed blog post as well as CSS for the site.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,6 +1,11 @@
 h1 a {
     color: orange;
-	font-family: 'Arial';
+	font-family: 'Lobster', sans-serif;
+}
+
+.head {
+	color: orange;
+	font-family: 'Lobster';
 }
 
 body {
