--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,6 +22,7 @@
 							{{ post.published_date }}
 						</time>
 						<h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+						<a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
 						<p>{{ post.text|linebreaksbr }}</p>
 					</article>
 				{% endfor %}
